--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flashcards",
+  "name": "cardsapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,14 +14,23 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@storybook/addon-actions": "^7.4.5",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@it-incubator/eslint-config": "^0.1.3",
     "@it-incubator/prettier-config": "^0.1.2",
     "@it-incubator/stylelint-config": "^0.1.5",
