--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^1.9.7",
     "@storybook/addon-actions": "^7.4.5",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
