--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.7",
     "@storybook/addon-actions": "^7.4.5",
+    "async-mutex": "^0.4.0",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
